# dotfox

./: .editorconfig  .gitattributes  .gitignore  .markdownlintrc.json  .old  404.html  Bakefile.sh  CODE_OF_CONDUCT.md  Justfile  LICENSE  Makefile  README.md  Taskfile.yml  dotfox.nimble  dotty.nim  dotty.nimble  fetchLicenses.sh  files.yml  fox.json  foxxy.toml  globe.toml  go.mod  go.sum  helper.go  main.go  readme.md  search.html  sitemap.xml  test.sh  util.go
.github/: CODE_OF_CONDUCT.md  COMMIT_CONVENTION.md  COMMIT_CONVENTIONS.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.globe/: globe.state  globe.state.json
actions/: apply.go  open.go
cli/: cli.go
cmd/: check.go  init.go  inits.go  inits.helper.go  local.go  local_apply.go  local_edit.go  local_init.go  print.go  root.go  sync.go  system.go  system_apply.go  system_edit.go  user.go  user_add.go  user_apply.go  user_check.go  user_edit.go  user_unapply.go  validate.go
completions/: dotfox.sh  dotty.sh
config/: config.go  config.helper.go  validate.go
docs/: concepts.md  getting-started.md  installation.md  reference.md  terminology.md  troubleshooting.md  usage.md
e2e/: full_test.go  generate.sh  test.helper.go  test.util.go  user_test.go
files/: .editorconfig  .gitattributes
fs/: fs.go  fs.helper.go
getting-started/: index.html
globe/: init.go  init.helper.go  update.go  update.helper.go
inits/: inits.go  inits.helper.go
inspect/: inspect.go  util.go
installation/: index.html
licenses/: 0bsd.txt  (+10 more)
tools/package-json-old/: Cargo.toml  main.go
tools/package-json-old/src/: main.rs
(+102 files in other folders)
